refactor: fixing minor bugs and separating gameInfo from domain